<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Update.UpdateActivity"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:id="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/appBarLayout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.143"
            android:contentDescription="TODO" />

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay"
            tools:ignore="MissingConstraints"
            android:id="@+id/appBarLayout">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
            android:id="@+id/textName"
            android:layout_width="328dp"
            android:layout_height="69dp"
            tools:ignore="MissingConstraints"
            android:inputType="text"
            android:hint="@string/enter_student_name"
            android:autofillHints=""
            tools:layout_editor_absoluteX="50dp"
            app:layout_constraintTop_toBottomOf="@+id/textId"
            app:layout_constraintBottom_toTopOf="@+id/textUniversity" />

    <EditText
            android:id="@+id/textId"
            android:layout_width="328dp"
            android:layout_height="60dp"
            tools:ignore="MissingConstraints"
            android:inputType="numberDecimal"
            android:hint="@string/enter_student_id"
            android:autofillHints=""
            tools:layout_editor_absoluteX="50dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintBottom_toTopOf="@+id/textName" />

    <EditText
            android:id="@+id/textUniversity"
            android:layout_width="328dp"
            android:layout_height="58dp"
            tools:ignore="MissingConstraints"
            android:inputType="text"
            android:hint="@string/enter_university_name"
            android:autofillHints=""
            tools:layout_editor_absoluteX="51dp"
            app:layout_constraintTop_toBottomOf="@+id/textName"
            app:layout_constraintBottom_toTopOf="@+id/textTerm" />

    <EditText
            android:id="@+id/textTerm"
            android:layout_width="328dp"
            android:layout_height="63dp"
            tools:ignore="MissingConstraints"
            android:inputType="text"
            android:hint="@string/enter_term"
            android:autofillHints=""
            tools:layout_editor_absoluteX="51dp"
            app:layout_constraintTop_toBottomOf="@+id/textUniversity"
            app:layout_constraintBottom_toTopOf="@+id/submit" />

    <Button
            android:id="@+id/submit"
            android:layout_width="169dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.968"
            android:layout_gravity="bottom|end"
            android:background="@color/colorPrimary"
            android:textColor="#FBFBFB"
            app:layout_constraintHorizontal_bias="0.533"
            android:shadowRadius="10" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="58dp"
            android:layout_height="54dp"
            android:clickable="true"
            app:srcCompat="@drawable/ic_baseline_add_circle_24"
            android:id="@+id/delete_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.955"
            android:contentDescription="TODO"
            android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>